--- a/app/src/main/res/layout/activity_parse_json.xml
+++ b/app/src/main/res/layout/activity_parse_json.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:background="@color/colorPrimaryDark"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.learn.ashwini.gomovie.parseJson">
 
     <android.support.v7.widget.CardView
+        card_view:cardUseCompatPadding="true"
+        android:elevation="5dp"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
@@ -51,6 +53,7 @@
             android:id="@+id/info_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="2dp"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="19dp"
             android:layout_marginRight="200dp"
@@ -62,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="55dp"
+            android:elevation="2dp"
             android:layout_marginRight="100dp"
             android:layout_marginTop="50dp"
             android:fontFamily="sans-serif-condensed"
@@ -69,6 +73,7 @@
         <TextView
             android:id="@+id/username"
             android:layout_width="match_parent"
+            android:elevation="2dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="83dp"
@@ -80,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="118dp"
+            android:elevation="2dp"
             android:layout_marginRight="200dp"
             android:fontFamily="sans-serif-condensed"
             android:textSize="20dp"/>
